--- a/kelabros/components/about.html
+++ b/kelabros/components/about.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
   <link href="stylesheets/style.css" rel="stylesheet" type="text/css">
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
@@ -14,77 +14,79 @@
   <title>Kela Brother's Mewawala | HOME :: H&H Enterprise</title>
 
 </head>
+
 <body>
 
   <div id="header">
   </div>
 
-      <h3>Our Offering</h3>
+  <h3>Our Offering</h3>
 
-<div class="row Aboutexp" >
-  <div class="col-lg-6 col-md-6 col-sm-6 about-section">
-    <div class="img-wrapper">
-      <img src="images/cart2.jpg">
+  <div class="row Aboutexp">
+    <div class="col-lg-6 col-md-6 col-sm-6 about-section">
+      <div class="img-wrapper">
+        <img src="images/aboutImage1.jpeg">
+      </div>
     </div>
-  </div>
     <div class="col-lg-6 col-md-6 col-sm-6 about-section">
       <p>Excepteur sint occaecat non proident, sunt in culpa quis. Phasellus lacinia id erat eu ullamcorper.
         Nunc id ipsum fringilla, gravida felis vitae. Phasellus lacinia id, sunt in culpa quis. Phasellus lacinia
-Excepteur sint occaecat non proident, sunt in culpa quis. Phasellus lacinia id erat eu ullamcorper. Nunc id ipsum fringilla.</p>
+        Excepteur sint occaecat non proident, sunt in culpa quis. Phasellus lacinia id erat eu ullamcorper. Nunc id ipsum fringilla.</p>
     </div>
 
-</div>
-      <div class="container mt-5 ml-3">
-          <div class="row about-row p-5">
-              <div class="card col-md-4 about-card">
-                  <div class="text-center rounded">
-                    <div class="card-header about-card-header">
-                    <i class="fa fa-phone" aria-hidden="true"></i>
-                      <h4>Call US anytime</h4>
-                    </div>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
-
-                  </div>
-              </div>
-
-              <div class="card col-md-4 about-card">
-                  <div class="text-center rounded">
-<div class="card-header about-card-header">
-                    <i class="fas fa-truck"></i>
-                      <h4>HOME Delivery</h4>
-                    </div>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
-
-                  </div>
-              </div>
-              <div class="card col-md-4 about-card">
-                  <div class="text-center rounded">
-<div class="card-header about-card-header">
-                    <i class="fas fa-wallet"></i>
-                      <h4>Secure Payments</h4>
-                    </div>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
-
-                  </div>
-              </div>
-
-
+  </div>
+  <div class="container mt-5 ml-3">
+    <div class="row about-row p-5">
+      <div class="card col-md-4 about-card">
+        <div class="text-center rounded">
+          <div class="card-header about-card-header">
+            <i class="fa fa-phone" aria-hidden="true"></i>
+            <h4>Call US anytime</h4>
           </div>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
+
+        </div>
+      </div>
+
+      <div class="card col-md-4 about-card">
+        <div class="text-center rounded">
+          <div class="card-header about-card-header">
+            <i class="fa fa-truck"></i>
+            <h4>HOME Delivery</h4>
+          </div>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
+
+        </div>
+      </div>
+      <div class="card col-md-4 about-card">
+        <div class="text-center rounded">
+          <div class="card-header about-card-header">
+            <i class="fas fa-wallet"></i>
+            <h4>Secure Payments</h4>
+          </div>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
+
+        </div>
       </div>
 
 
-<div id="footer">
-</div>
+    </div>
+  </div>
 
-<script>
-$(function(){
-	$("#header").load("Header.html");
-	$("#footer").load("Footer.html");
-});
-</script>
+
+  <div id="footer">
+  </div>
+
+  <script>
+    $(function() {
+      $("#header").load("Header.html");
+      $("#footer").load("Footer.html");
+    });
+  </script>
 
 </body>
+
 </html>
