--- a/kelabros/components/dryFruits.html
+++ b/kelabros/components/dryFruits.html
@@ -14,7 +14,7 @@
 
 </head>
 
-<body>
+<body class="dryfruit-main">
 
 
   <div id="header">
@@ -261,7 +261,6 @@
 
   <div id="footer">
   </div>
-
   <script src="js/headerFooter.js"></script>
 
 </body>
