--- a/kelabros/components/contact.html
+++ b/kelabros/components/contact.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"> <!-- only for circular images -->
   <link href="stylesheets/style.css" rel="stylesheet" type="text/css">
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
@@ -50,7 +50,7 @@
             <div class="col-lg-6 col-md-6 col-sm-6 contact-block">
               <div class="card bg-light contact-card">
                 <div class="card-body bg-light contact-card-body">
-                  <div class="card-header contact-card-header"><i class="fa fa-map-marker" aria-hidden="true"></i> Store 1:</div>
+                  <div class="card-header contact-card-header"><i class="fa fa-map-marker-alt" aria-hidden="true"></i> Store 1:</div>
                   <p class="card-text contact-card-text">
                     Shop no.3, Akash Apartment, Karve Road<br>
                     Next to Bakers Basket<br>
@@ -62,7 +62,7 @@
             <div class="col-lg-6 col-md-6 col-sm-6 contact-block">
               <div class="card bg-light contact-card">
                 <div class="card-body bg-light contact-card-body">
-                  <div class="card-header contact-card-header"><i class="fa fa-map-marker" aria-hidden="true"></i> Store 2:</div>
+                  <div class="card-header contact-card-header"><i class="fa fa-map-marker-alt" aria-hidden="true"></i> Store 2:</div>
                   <p class="card-text contact-card-text">
                     Kapad Ganj, Raviwar Peth,<br>
                     Maharashtra <br>
