--- a/kelabros/components/Footer.html
+++ b/kelabros/components/Footer.html
@@ -4,6 +4,6 @@
         <a class="fa fa-facebook-f fa-lg" href="#"></a>
        <a class="fa fa-twitter fa-lg" href="#"></a>
         <a class="fa fa-instagram fa-lg" href="#"></a>
-     <a class="fa fa-google-plus fa-lg" href="#"></a>
+     <a class="fab fa-google-wallet fa-lg" href="#"></a>
     </div>
 </footer>
