--- a/kelabros/components/index.html
+++ b/kelabros/components/index.html
@@ -141,14 +141,14 @@
             <div class="row">
               <div class="col-lg-6 col-md-6 col-sm-6 testimonial bg-light text-center rounded">
                 <img src="https://i.imgur.com/lU2pDQv.png" width="40">
-                <p>By far the best quality dry fruits I've had in Pune. They have a variety of cashews -pepper, cheese, salted to name a few. My personal favorite are Masala Cashews! I would definitely recommend Kela Brothers Mewawala because of the hygiene they observe in such Covid times. Their warm and loving nature makes you visit the store for the next time for sure!</p><img class="rounded-circle"
-                  src="images/bg1.jpg" width="50" height="50">
+                <p>By far the best quality dry fruits I've had in Pune. They have a variety of cashews -pepper, cheese, salted to name a few. My personal favorite are Masala Cashews! I would definitely recommend Kela Brothers Mewawala because of the
+                  hygiene they observe in such Covid times. Their warm and loving nature makes you visit the store for the next time for sure!</p><img class="rounded-circle" src="images/bg1.jpg" width="50" height="50">
                 <h5>Janaki J</h5>
               </div>
               <div class="col-lg-6 col-md-6 col-sm-6 testimonial bg-light text-center rounded">
                 <img src="https://i.imgur.com/lU2pDQv.png" width="40">
-                <p>It's shop is exclusive and good quality Dryfruits. It's different than other Dryfruits .there other items like spices and mukhwas also nice.. . Clean and hygiene packing also. Ek baar khoge to khaate rehejaoge. ..</p><img class="rounded-circle"
-                  src="images/bg1.jpg" width="50" height="50">
+                <p>It's shop is exclusive and good quality Dryfruits. It's different than other Dryfruits .there other items like spices and mukhwas also nice.. . Clean and hygiene packing also. Ek baar khoge to khaate rehejaoge. ..</p><img
+                  class="rounded-circle" src="images/bg1.jpg" width="50" height="50">
                 <h5>Ranjita B</h5>
               </div>
             </div>
@@ -158,26 +158,22 @@
             <div class="row">
               <div class="col-lg-3 col-md-3 col-sm-3 testimonial bg-light text-center rounded">
                 <img src="https://i.imgur.com/lU2pDQv.png" width="40">
-                <p>Visit once before buying dryfruits &spices for world class quality.</p><img class="rounded-circle"
-                  src="images/bg1.jpg" width="50" height="50">
+                <p>Visit once before buying dryfruits &spices for world class quality.</p><img class="rounded-circle" src="images/bg1.jpg" width="50" height="50">
                 <h5>Tejas K</h5>
               </div>
               <div class="col-lg-3 col-md-3 col-sm-3 testimonial bg-light text-center rounded">
                 <img src="https://i.imgur.com/lU2pDQv.png" width="40">
-                <p>Visit once before buying dryfruits &spices for world class quality.</p><img class="rounded-circle"
-                  src="images/bg1.jpg" width="50" height="50">
+                <p>Visit once before buying dryfruits &spices for world class quality.</p><img class="rounded-circle" src="images/bg1.jpg" width="50" height="50">
                 <h5>Tejas K</h5>
               </div>
               <div class="col-lg-3 col-md-3 col-sm-3 testimonial bg-light text-center rounded">
                 <img src="https://i.imgur.com/lU2pDQv.png" width="40">
-                <p>Visit once before buying dryfruits &spices for world class quality.</p><img class="rounded-circle"
-                  src="images/bg1.jpg" width="50" height="50">
+                <p>Visit once before buying dryfruits &spices for world class quality.</p><img class="rounded-circle" src="images/bg1.jpg" width="50" height="50">
                 <h5>Tejas K</h5>
               </div>
               <div class="col-lg-3 col-md-3 col-sm-3 testimonial bg-light text-center rounded">
                 <img src="https://i.imgur.com/lU2pDQv.png" width="40">
-                <p>Visit once before buying dryfruits &spices for world class quality.</p><img class="rounded-circle"
-                  src="images/bg1.jpg" width="50" height="50">
+                <p>Visit once before buying dryfruits &spices for world class quality.</p><img class="rounded-circle" src="images/bg1.jpg" width="50" height="50">
                 <h5>Tejas K</h5>
               </div>
             </div>
