--- a/kelabros/components/contact.html
+++ b/kelabros/components/contact.html
@@ -3,14 +3,14 @@
 
 <head>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"> <!-- only for circular images -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
   <link href="stylesheets/style.css" rel="stylesheet" type="text/css">
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-1.10.2.js" crossorigin="anonymous"></script>
 
-  <title>Kela Brother's Mewawala | HOME :: H&H Enterprise</title>
+  <title>Kela Brother's Mewawala | CONTACT :: H&H Enterprise</title>
 
 </head>
 
@@ -20,104 +20,104 @@
   <div id="header">
   </div>
 
-    <div class="row contact-page-main">
-      <div class="col-lg-6 col-md-6 col-sm-6 contact-left">
-        <div class="cont-details">
-          <h3 class=" "><b>Get in touch</b></h3>
-          <p class="contact-text">We're ready to lead you into the future with Business Services</p>
-          <div class="row">
-            <div class="col-lg-6 col-md-6 col-sm-6 contact-block">
-              <div class="card bg-light contact-card">
-                <div class="card-body bg-light contact-card-body">
-                  <div class="card-header contact-card-header"><i class="fa fa-phone" aria-hidden="true"></i> Call Us</div>
-                  <p class="card-text contact-card-text">Tel: 020-24476729 <br>
-                    +91 94220 05670 </p>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-6 col-md-6 col-sm-6 contact-block">
-              <div class="card bg-light contact-card">
-                <div class="card-body bg-light contact-card-body">
-                  <div class="card-header contact-card-header"><i class="fa fa-envelope" aria-hidden="true"></i> Email</div>
-                  <p class="card-text contact-card-text">kelabrotherskothrud@gmail.com <br>
-                    kela.pratik53@gmail.com</p>
-                </div>
+  <div class="row contact-page-main">
+    <div class="col-lg-6 col-md-6 col-sm-6 contact-left">
+      <div class="cont-details">
+        <h3 class=" "><b>Get in touch</b></h3>
+        <p class="contact-text">We're ready to lead you into the future with Business Services</p>
+        <div class="row">
+          <div class="col-lg-6 col-md-6 col-sm-6 contact-block">
+            <div class="card bg-light contact-card">
+              <div class="card-body bg-light contact-card-body">
+                <div class="card-header contact-card-header"><i class="fa fa-phone" aria-hidden="true"></i> Call Us</div>
+                <p class="card-text contact-card-text">Tel: 020-24476729 <br>
+                  +91 94220 05670 </p>
               </div>
             </div>
           </div>
-
-          <div class="row">
-            <div class="col-lg-6 col-md-6 col-sm-6 contact-block">
-              <div class="card bg-light contact-card">
-                <div class="card-body bg-light contact-card-body">
-                  <div class="card-header contact-card-header"><i class="fa fa-map-marker-alt" aria-hidden="true"></i> Store 1:</div>
-                  <p class="card-text contact-card-text">
-                    Shop no.3, Akash Apartment, Karve Road<br>
-                    Next to Bakers Basket<br>
-                    Pune, 411038.
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-6 col-md-6 col-sm-6 contact-block">
-              <div class="card bg-light contact-card">
-                <div class="card-body bg-light contact-card-body">
-                  <div class="card-header contact-card-header"><i class="fa fa-map-marker-alt" aria-hidden="true"></i> Store 2:</div>
-                  <p class="card-text contact-card-text">
-                    Kapad Ganj, Raviwar Peth,<br>
-                    Maharashtra <br>
-                    Pune, 411002.
-                  </p>
-                </div>
+          <div class="col-lg-6 col-md-6 col-sm-6 contact-block">
+            <div class="card bg-light contact-card">
+              <div class="card-body bg-light contact-card-body">
+                <div class="card-header contact-card-header"><i class="fa fa-envelope" aria-hidden="true"></i> Email</div>
+                <p class="card-text contact-card-text">kelabrotherskothrud@gmail.com <br>
+                  kela.pratik53@gmail.com</p>
               </div>
             </div>
           </div>
         </div>
-        <div class="cont-details">
-          <h3 class=" "><b>Working Hours</b></h3>
-          <div class="row">
-            <div class="col-lg-6 col-md-6 col-sm-6 contact-block">
-              <div class="card bg-light contact-card">
-                <div class="card-body bg-light contact-card-body">
-                  <div class="card-header contact-card-header"><i class="fa fa-globe" aria-hidden="true"></i> Business Services</div>
-                  <p class="card-title contact-card-title">
-                    Monday to Friday</p>
-                  <p class="card-text contact-card-text">
-                    9.00 am - 9.00 pm <br>
-                    2.00 pm - 4.00 pm - Closed
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-6 col-md-6 col-sm-6 contact-block">
-              <div class="card bg-light contact-card">
-                <div class="card-body bg-light contact-card-body">
-                  <div class="card-header contact-card-header"><i class="fa fa-globe" aria-hidden="true"></i> Customer Support</div>
-                  <p class="card-title contact-card-title">
-                    Monday to Friday</p>
-                  <p class="card-text contact-card-text">
-                    9.00 am - 9.00 pm <br>
-                    2.00 pm - 4.00 pm - Closed
-                  </p>
+
+        <div class="row">
+          <div class="col-lg-6 col-md-6 col-sm-6 contact-block">
+            <div class="card bg-light contact-card">
+              <div class="card-body bg-light contact-card-body">
+                <div class="card-header contact-card-header"><i class="fa fa-map-marker-alt" aria-hidden="true"></i> Store 1:</div>
+                <p class="card-text contact-card-text">
+                  Shop no.3, Akash Apartment, Karve Road<br>
+                  Next to Bakers Basket<br>
+                  Pune, 411038.
+                </p>
               </div>
             </div>
           </div>
+          <div class="col-lg-6 col-md-6 col-sm-6 contact-block">
+            <div class="card bg-light contact-card">
+              <div class="card-body bg-light contact-card-body">
+                <div class="card-header contact-card-header"><i class="fa fa-map-marker-alt" aria-hidden="true"></i> Store 2:</div>
+                <p class="card-text contact-card-text">
+                  Kapad Ganj, Raviwar Peth,<br>
+                  Maharashtra <br>
+                  Pune, 411002.
+                </p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
-      <div class="col-lg-6 col-md-6 col-sm-6 contact-right">
-        <div class="contact-map">
-          <h3>Visit Us</h3>
-          <div class="mapouter">
-            <div class="gmap_canvas">
-              <iframe class="border border-dark rounded" width="550" height="450" id="gmap_canvas" src="https://maps.google.com/maps?q=kela%20brothers&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0"
-                marginwidth="0"></iframe>
-              <a href="https://www.whatismyip-address.com/divi-discount/"></a>
+      <div class="cont-details">
+        <h3 class=" "><b>Working Hours</b></h3>
+        <div class="row">
+          <div class="col-lg-6 col-md-6 col-sm-6 contact-block">
+            <div class="card bg-light contact-card">
+              <div class="card-body bg-light contact-card-body">
+                <div class="card-header contact-card-header"><i class="fa fa-globe" aria-hidden="true"></i> Business Services</div>
+                <p class="card-title contact-card-title">
+                  Monday to Friday</p>
+                <p class="card-text contact-card-text">
+                  9.00 am - 9.00 pm <br>
+                  2.00 pm - 4.00 pm - Closed
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6 col-md-6 col-sm-6 contact-block">
+            <div class="card bg-light contact-card">
+              <div class="card-body bg-light contact-card-body">
+                <div class="card-header contact-card-header"><i class="fa fa-globe" aria-hidden="true"></i> Customer Support</div>
+                <p class="card-title contact-card-title">
+                  Monday to Friday</p>
+                <p class="card-text contact-card-text">
+                  9.00 am - 9.00 pm <br>
+                  2.00 pm - 4.00 pm - Closed
+                </p>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
+    <div class="col-lg-6 col-md-6 col-sm-6 contact-right">
+      <div class="contact-map">
+        <h3>Visit Us</h3>
+        <div class="mapouter">
+          <div class="gmap_canvas">
+            <iframe class="border border-dark rounded" width="550" height="450" id="gmap_canvas" src="https://maps.google.com/maps?q=kela%20brothers&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0"
+              marginwidth="0"></iframe>
+            <a href="https://www.whatismyip-address.com/divi-discount/"></a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <div id="footer">
   </div>
