--- a/kelabros/components/Footer.html
+++ b/kelabros/components/Footer.html
@@ -1,9 +1,9 @@
 <footer>
-    <span><b> Find us here! </b></span>
-    <div class="handles">
-        <a class="fa fa-facebook-f fa-lg" href="#"></a>
-       <a class="fa fa-twitter fa-lg" href="#"></a>
-        <a class="fa fa-instagram fa-lg" href="#"></a>
-     <a class="fab fa-google-wallet fa-lg" href="#"></a>
-    </div>
+  <span><b> Find us here! </b></span>
+  <div class="handles">
+    <a class="fab fa-facebook-square fa-lg" href="#"></a>
+    <a class="fab fa-twitter-square fa-lg" href="#"></a>
+    <a class="fab fa-instagram-square fa-lg" href="#"></a>
+    <a class="fab fa-google-wallet fa-lg" href="#"></a>
+  </div>
 </footer>
