--- a/kelabros/components/index.html
+++ b/kelabros/components/index.html
@@ -50,6 +50,8 @@
     </div>
   </div>
 
+    <hr />
+
   <div class="protypes">
     <h3>Shop With US<br>This space is for PRODUCTS.</h3>
 
@@ -57,25 +59,25 @@
       <div class="products products-five row">
         <div class="col-6 col-lg-2 col-sm-4">
           <a href="dryFruits.html">
-            <img src="images/dryFruitsIndex.png" class="product-image rounded-circle border border-white" width="150" height="150">
+            <img src="images/dryFruitsIndex.png" class="product-image rounded-circle border border-black" width="150" height="150">
             <h2>Dry Fruits</h2>
           </a>
         </div>
         <div class="col-6 col-lg-2 col-sm-4">
           <a href="spices.html">
-            <img src="images/spicesIndex.png" class="product-image rounded-circle border border-white" width="150" height="150">
+            <img src="images/spicesIndex.png" class="product-image rounded-circle border border-black" width="150" height="150">
             <h2>Spices</h2>
           </a>
         </div>
         <div class="col-6 col-lg-2 col-sm-4">
           <a href="organics.html">
-            <img src="images/bg1.jpg" class="product-image rounded-circle border border-white" width="150" height="150">
+            <img src="images/bg1.jpg" class="product-image rounded-circle border border-black" width="150" height="150">
             <h2>Organics</h2>
           </a>
         </div>
         <div class="col-6 col-lg-2 col-sm-4">
           <a href="nutrition.html">
-            <img src="images/bg1.jpg" class="product-image rounded-circle border border-white" width="150" height="150">
+            <img src="images/bg1.jpg" class="product-image rounded-circle border border-black" width="150" height="150">
             <h2>Nutrition</h2>
           </a>
         </div>
@@ -88,6 +90,8 @@
       </div>
     </div>
   </div>
+
+    <hr />
 
   <div class="recommendedProducts">
     <h3>Most Loved Products<br>Some data here.</h3>
@@ -123,6 +127,8 @@
     </div>
   </div>
 
+    <hr />
+
   <div class="testimonialSection">
     <h3>Customers Love</h3>
 
@@ -140,13 +146,13 @@
           <div class="carousel-item active">
             <div class="row">
               <div class="col-lg-6 col-md-6 col-sm-6 testimonial bg-light text-center rounded">
-                <img src="https://i.imgur.com/lU2pDQv.png" width="40">
+                <i class="fas fa-quote-left fa-lg"></i>
                 <p>By far the best quality dry fruits I've had in Pune. They have a variety of cashews -pepper, cheese, salted to name a few. My personal favorite are Masala Cashews! I would definitely recommend Kela Brothers Mewawala because of the
                   hygiene they observe in such Covid times. Their warm and loving nature makes you visit the store for the next time for sure!</p><img class="rounded-circle" src="images/bg1.jpg" width="50" height="50">
                 <h5>Janaki J</h5>
               </div>
               <div class="col-lg-6 col-md-6 col-sm-6 testimonial bg-light text-center rounded">
-                <img src="https://i.imgur.com/lU2pDQv.png" width="40">
+                <i class="fas fa-quote-left fa-lg"></i>
                 <p>It's shop is exclusive and good quality Dryfruits. It's different than other Dryfruits .there other items like spices and mukhwas also nice.. . Clean and hygiene packing also. Ek baar khoge to khaate rehejaoge. ..</p><img
                   class="rounded-circle" src="images/bg1.jpg" width="50" height="50">
                 <h5>Ranjita B</h5>
@@ -157,23 +163,23 @@
           <div class="carousel-item">
             <div class="row">
               <div class="col-lg-3 col-md-3 col-sm-3 testimonial bg-light text-center rounded">
-                <img src="https://i.imgur.com/lU2pDQv.png" width="40">
-                <p>Visit once before buying dryfruits &spices for world class quality.</p><img class="rounded-circle" src="images/bg1.jpg" width="50" height="50">
+                <i class="fas fa-quote-left fa-lg"></i>
+                <p>Visit once before buying dryfruits & spices for world class quality.</p><img class="rounded-circle" src="images/bg1.jpg" width="50" height="50">
                 <h5>Tejas K</h5>
               </div>
               <div class="col-lg-3 col-md-3 col-sm-3 testimonial bg-light text-center rounded">
-                <img src="https://i.imgur.com/lU2pDQv.png" width="40">
-                <p>Visit once before buying dryfruits &spices for world class quality.</p><img class="rounded-circle" src="images/bg1.jpg" width="50" height="50">
+                <i class="fas fa-quote-left fa-lg"></i>
+                <p>Visit once before buying dryfruits & spices for world class quality.</p><img class="rounded-circle" src="images/bg1.jpg" width="50" height="50">
                 <h5>Tejas K</h5>
               </div>
               <div class="col-lg-3 col-md-3 col-sm-3 testimonial bg-light text-center rounded">
-                <img src="https://i.imgur.com/lU2pDQv.png" width="40">
-                <p>Visit once before buying dryfruits &spices for world class quality.</p><img class="rounded-circle" src="images/bg1.jpg" width="50" height="50">
+                <i class="fas fa-quote-left fa-lg"></i>
+                <p>Visit once before buying dryfruits & spices for world class quality.</p><img class="rounded-circle" src="images/bg1.jpg" width="50" height="50">
                 <h5>Tejas K</h5>
               </div>
               <div class="col-lg-3 col-md-3 col-sm-3 testimonial bg-light text-center rounded">
-                <img src="https://i.imgur.com/lU2pDQv.png" width="40">
-                <p>Visit once before buying dryfruits &spices for world class quality.</p><img class="rounded-circle" src="images/bg1.jpg" width="50" height="50">
+                <i class="fas fa-quote-left fa-lg"></i>
+                <p>Visit once before buying dryfruits & spices for world class quality.</p><img class="rounded-circle" src="images/bg1.jpg" width="50" height="50">
                 <h5>Tejas K</h5>
               </div>
             </div>
@@ -182,19 +188,19 @@
           <div class="carousel-item">
             <div class="row">
               <div class="col-lg-4 col-md-4 col-sm-4 testimonial bg-light text-center rounded">
-                <img src="https://i.imgur.com/lU2pDQv.png" width="40">
+                <i class="fas fa-quote-left fa-lg"></i>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p><img class="rounded-circle"
                   src="images/bg1.jpg" width="50" height="50">
                 <h5>Tony Sam</h5>
               </div>
               <div class="col-lg-4 col-md-4 col-sm-4 testimonial bg-light text-center rounded">
-                <img src="https://i.imgur.com/lU2pDQv.png" width="40">
+                <i class="fas fa-quote-left fa-lg"></i>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p><img class="rounded-circle"
                   src="images/bg1.jpg" width="50" height="50">
                 <h5>Tony Sam</h5>
               </div>
               <div class="col-lg-4 col-md-4 col-sm-4 testimonial bg-light text-center rounded">
-                <img src="https://i.imgur.com/lU2pDQv.png" width="40">
+                <i class="fas fa-quote-left fa-lg"></i>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p><img class="rounded-circle"
                   src="images/bg1.jpg" width="50" height="50">
                 <h5>Tony Sam</h5>
