--- a/kelabros/components/stylesheets/style.css
+++ b/kelabros/components/stylesheets/style.css
@@ -90,7 +90,7 @@ max-width:80px;
 }
 
 #bannerCarousel {
-  background-color: #c87941;
+  /* background-color: #c87941; */
 }
 
 .banner-image {
@@ -117,13 +117,13 @@ font-size:1.3rem;
 }
 
 .protypes{
-  background-color: #c87941;
+  /* background-color: #c87941; */
   /* margin: 1%; */
   text-align: center;
 }
 
 .products-background {
-  background-image: linear-gradient(180deg, #FFD57E, #AC4B1C);
+  /* background-image: linear-gradient(180deg, #FFD57E, #AC4B1C); */
 }
 
 .products {
@@ -158,7 +158,7 @@ max-width: 70%
 .products h2 {
   font-size:1.3rem;
   font-weight: bold;
-  color: white;
+  color: #AC4B1C;
   margin-top: 10%;
   padding: 5% 0;
 }
@@ -180,7 +180,7 @@ padding-bottom:2%;
 
 .recommendedProducts {
   /* margin: 1%; */
-  background-color: #c87941;
+  /* background-color: #c87941; */
 }
 .recommendedProducts h3{
 font-size:1.3rem;
@@ -210,7 +210,7 @@ font-size:1.3rem;
 
 .testimonial h5 {
     padding-top: 10px;
-    color: #9c27b0;
+    color: #AC4B1C;
     text-transform: uppercase;
     font-size: 15px;
     margin-top: 2%;
@@ -231,13 +231,17 @@ font-size:1.3rem;
     margin: 2% auto;
 }
 
+.testimonial i {
+  color: #AC4B1C;
+}
+
 .testo{
   padding-top: 5%;
   padding-bottom: 5%;
 }
 
 .testimonialSection {
-  background-color: #290001;
+  /* background-color: #290001; */
   /* margin: 1%; */
 }
 
@@ -446,15 +450,40 @@ background-image: linear-gradient(180deg, #FFD57E, #AC4B1C);
 
 h3 {
   margin-top: 0;
-  background-color: #87431d;
+  /* background-color: #87431d; */
   padding-top: 2%;
   padding-bottom: 2%;
   text-align: center;
-  color: white;
+  color: #290001;
   margin-bottom: 0;
   border-radius: 5px 5px 0 0;
   font-size: 1.0rem;
 }
+
+/* hr {
+  margin: 2% auto;
+  width: 5%;
+  border-top: 10px dotted #AC4B1C;
+} */
+
+hr {
+  margin: 2% auto;
+  width: 25%;
+  border: none;
+  height: 1px;
+  background-image: linear-gradient(to right, #AC4B1C, #290001, #AC4B1C);
+}
+hr::after {
+  content: "KB";
+  display: inline-block;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transform-origin: 50% 50%;
+  padding: 1rem;
+  background-color: white;
+}
+
 
 /* Footer */
 footer {
