css update for dryfruit page.

--- a/kelabros/components/dryFruits.html
+++ b/kelabros/components/dryFruits.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
   <link href="stylesheets/style.css" rel="stylesheet" type="text/css">
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
@@ -21,11 +21,14 @@
   </div>
 
   <div class="dryfruits">
-    <div class="card protypes" id="sectionName1">
+    <div class="protypes" id="sectionName1">
       <div data-toggle="collapse" data-target="#dryFruit1" data-parent="#sectionName1">
-        <h3>Dry Fruit 1</h3>
+        <h3>Dry Fruit 1 <i class="fas fa-chevron-down fa-md"></i> </h3>
       </div>
-      <div id="dryFruit1" class="collapse multi-collapse container" data-parent="#sectionName1">
+      <div id="dryFruit1" class="collapse multi-collapse container dry-fruit-content" data-parent="#sectionName1">
+        <div class="dry-fruit-cards">
+          <span> QWERTY </span>
+        </div>
         <div class="products products-five row">
           <div class="col-lg-2 col-md-4 col-sm-4">
             <div data-toggle="collapse" data-target="#dryFruit1Content1" data-parent="#dryFruit1">
@@ -58,9 +61,6 @@
             </div>
           </div>
         </div>
-        <div class="cards">
-          <span> QWERTY </span>
-        </div>
         <div class="products information row">
           <div class="collapse multi-collapse" id="dryFruit1Content1" data-parent="#dryFruit1">
             <div class="card card-body">
@@ -91,11 +91,16 @@
       </div>
     </div>
 
-    <div class="card protypes" id="sectionName2">
+    <hr />
+
+    <div class="protypes" id="sectionName2">
       <div data-toggle="collapse" data-target="#dryFruit2" data-parent="#sectionName2">
-        <h3>Walnuts</h3>
+        <h3>Walnuts <i class="fas fa-chevron-down fa-md"></i></h3>
       </div>
-      <div id="dryFruit2" class="collapse multi-collapse container" data-parent="#sectionName2">
+      <div id="dryFruit2" class="collapse multi-collapse container dry-fruit-content" data-parent="#sectionName2">
+        <div class="dry-fruit-cards">
+          <span> QWERTY </span>
+        </div>
         <div class="products products-three row">
           <div class="col-lg-4 col-md-4 col-sm-4">
             <div data-toggle="collapse" data-target="#dryFruit2Content1" data-parent="#dryFruit2">
@@ -115,9 +120,6 @@
               <h2>Walnuts Three</h2>
             </div>
           </div>
-        </div>
-        <div class="cards">
-          <span> QWERTY </span>
         </div>
         <div class="products information row">
           <div class="collapse multi-collapse" id="dryFruit2Content1" data-parent="#dryFruit2">
@@ -139,11 +141,16 @@
       </div>
     </div>
 
-    <div class="card protypes" id="sectionName3">
+    <hr  />
+
+    <div class="protypes" id="sectionName3">
       <div data-toggle="collapse" data-target="#dryFruit3" data-parent="#sectionName3">
-        <h3>Almonds</h3>
+        <h3>Almonds <i class="fas fa-chevron-down fa-md"></i></h3>
       </div>
-      <div id="dryFruit3" class="collapse multi-collapse container" data-parent="#sectionName3">
+      <div id="dryFruit3" class="collapse multi-collapse container dry-fruit-content" data-parent="#sectionName3">
+        <div class="dry-fruit-cards">
+          <span> QWERTY </span>
+        </div>
         <div class="products products-five row">
           <div class="col-lg-2 col-md-4 col-sm-4">
             <div data-toggle="collapse" data-target="#dryFruit3Content1" data-parent="#dryFruit3">
@@ -176,9 +183,6 @@
             </div>
           </div>
         </div>
-        <div class="cards">
-          <span> QWERTY </span>
-        </div>
         <div class="products information row">
           <div class="collapse multi-collapse" id="dryFruit3Content1" data-parent="#dryFruit3">
             <div class="card card-body">
@@ -209,11 +213,16 @@
       </div>
     </div>
 
-    <div class="card protypes" id="sectionName4">
+    <hr />
+
+    <div class="protypes" id="sectionName4">
       <div data-toggle="collapse" data-target="#dryFruit4" data-parent="#sectionName4">
-        <h3>Cashew</h3>
+        <h3>Cashew <i class="fas fa-chevron-down fa-md"></i></h3>
       </div>
-      <div id="dryFruit4" class="collapse multi-collapse container" data-parent="#sectionName4">
+      <div id="dryFruit4" class="collapse multi-collapse container dry-fruit-content" data-parent="#sectionName4">
+        <div class="dry-fruit-cards">
+          <span> QWERTY </span>
+        </div>
         <div class="products products-three row">
           <div class="col-lg-4 col-md-4 col-sm-4">
             <div data-toggle="collapse" data-target="#dryFruit4Content1" data-parent="#dryFruit4">
@@ -233,9 +242,6 @@
               <h2>Cashew Three</h2>
             </div>
           </div>
-        </div>
-        <div class="cards">
-          <span> QWERTY </span>
         </div>
         <div class="products information row">
           <div class="collapse multi-collapse" id="dryFruit4Content1" data-parent="#dryFruit4">
