--- a/kelabros/components/contact.html
+++ b/kelabros/components/contact.html
@@ -107,7 +107,7 @@
     </div>
     <div class="col-lg-6 col-md-6 col-sm-6 contact-right">
       <div class="contact-map">
-        <h3>Visit Us</h3>
+        <h3><b>Visit Us</b></h3>
 
         <hr />
 
@@ -121,7 +121,7 @@
       </div>
 
       <hr />
-      
+
     </div>
   </div>
 
